refactor and fixes issue
