# src/controllers/mealController.js
@@ -163,18 +163,31 @@ const orderTheMeal = async (req, res) => {
   // #swagger.tags = ['meal']
   const currentUser = req.user._id;
   try {
-    const { meals, subTotal } = req.body;
+    const { meals, subTotal, couponCode, tip } = req.body;
 
     if (req.user.role === "user") {
       // const order = await OrderMeal.findById();
 
       const order = await OrderMeal.create({
         user: currentUser,
-        meals,
-        subTotal,
+        meals: JSON.parse(meals),
+        subTotal: subTotal,
+        couponUsed: couponCode,
+        tip: tip,
       });
 
       await order.save();
+
+      if (couponCode) {
+        await Coupon.findOneAndUpdate(
+          {
+            couponCode: couponCode,
+          },
+          {
+            user: { $push: currentUser },
+          }
+        );
+      }
 
       return SuccessHandler(
         { message: "Meal's Order Created successfully", order },
@@ -336,114 +349,6 @@ const deleteReview = async (req, res) => {
   }
 };
 
-//Create Coupon
-const createCoupon = async (req, res) => {
-  // #swagger.tags = ['meal']
-  try {
-    const { couponTitle, maxCoupon, discount, couponCode, expiryDate } =
-      req.body;
-
-    const currentUser = req.user._id;
-    const mealId = req.params.id;
-    const isMealExist = await Meal.find({
-      _id: mealId,
-      cook: currentUser,
-    });
-
-    if (!isMealExist) {
-      return ErrorHandler("Your Meal not found", 404, req, res);
-    }
-
-    const isCoupon = await Coupon.findOne({
-      meal: mealId,
-      couponCode,
-      createdBy: currentUser,
-    });
-
-    if (isCoupon) {
-      return ErrorHandler("Coupon already exist", 400, req, res);
-    }
-
-    if (new Date(expiryDate) <= new Date()) {
-      return ErrorHandler("Expiry date should be in future", 400, req, res);
-    }
-
-    const isValidCoupon = /^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]+$/.test(
-      couponCode
-    );
-    if (!isValidCoupon) {
-      return ErrorHandler("Coupon must contain number and text", 400, req, res);
-    }
-
-    const newCoupon = await Coupon.create({
-      couponTitle,
-      maxCoupon: Number(maxCoupon),
-      discount: Number(discount) / 100,
-      couponCode,
-      createdBy: currentUser,
-      expiryDate,
-      meal: mealId,
-    });
-
-    await newCoupon.save();
-
-    return SuccessHandler(
-      { success: true, message: "Coupon Added successfully", newCoupon },
-      200,
-      res
-    );
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-// verify meals and GIve Dicount
-const verifyCouponsAndGiveDiscount = async (req, res) => {
-  // #swagger.tags = ['meal']
-  try {
-    const { couponCode, selectedMeals } = req.body;
-    const coupon = await Coupon.findOne({
-      couponCode,
-      isActive: true,
-      expiryDate: { $gt: new Date() },
-    });
-    if (!coupon) {
-      return ErrorHandler("Coupon is not valid.", 404, req, res);
-    }
-
-    const applicableMeals = selectedMeals.filter(
-      (mealId) => coupon.meal && coupon.meal.toString() === mealId
-    );
-
-    if (applicableMeals.length === 0) {
-      return ErrorHandler(
-        {
-          success: false,
-          message: "Coupon is not applicable to any selected meals.",
-        },
-        404,
-        req,
-        res
-      );
-    }
-    // Calculate the total discount for applicable meals
-    const totalDiscount = applicableMeals.reduce((acc, meal) => {
-      return acc + meal.price * (coupon.discount / 100);
-    }, 0);
-
-    // Calculate the new total amount after applying the discount
-    const newTotalAmount = orderTotal - totalDiscount;
-
-    return SuccessHandler(
-      { success: true, message: "Coupon Applied successfully", newTotalAmount },
-      200,
-      res
-    );
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
 module.exports = {
   createMeal,
   getMeals,
@@ -453,6 +358,4 @@ module.exports = {
   addReviews,
   getReviews,
   deleteReview,
-  createCoupon,
-  verifyCouponsAndGiveDiscount,
 };
