# src/router/coupon.js
@@ -4,5 +4,5 @@ const coupon = require("../controllers/couponController");
 const isAuthenticated = require("../middleware/auth");
 
 router.route("/createCoupon").post(isAuthenticated, coupon.createCoupon);
-
+router.route("/verifyCoupon").post(isAuthenticated, coupon.verifyCoupon);
 module.exports = router;
